--- a/k8s-install/k8s-by-kubeadm/1.vm-install.md
+++ b/k8s-install/k8s-by-kubeadm/1.vm-install.md
@@ -81,3 +81,12 @@ swapoff -a
 vi /etc/fstab
 remove the line with swap keyword
 ```
+
+### install openssh-server and enable 
+
+```sh
+apt install -y openssh-server vim
+vim /etc/ssh/sshd_config # edit allow root login
+systemctl restart ssh
+```
+
