--- a/k8s-install/k8s-by-kubeadm/4.containerd-install.md
+++ b/k8s-install/k8s-by-kubeadm/4.containerd-install.md
@@ -25,13 +25,6 @@ sed -i s#'SystemdCgroup = false'#'SystemdCgroup = true'#g /etc/containerd/config
 # 最新的pause容器镜像tag为3.9, registry.aliyuncs.com/google_containers/pause:3.9
 ```
 
-### Edit kubelet config and add extra args. Based on v1.24 onwards version, it is not needed!!!
-
-```sh
-vi /etc/systemd/system/kubelet.service.d/10-kubeadm.conf
-Environment="KUBELET_EXTRA_ARGS=--container-runtime=remote --container-runtime-endpoint=unix:///run/containerd/containerd.sock --pod-infra-container-image=registry.aliyuncs.com/google_containers/pause:3.5"
-```
-
 ### Restart
 
 ```sh
@@ -40,10 +33,15 @@ systemctl restart containerd
 systemctl restart kubelet
 ```
 
+### install cri-tools
+
+```sh
+apt install -y cri-tools
+```
+
 ### Config crictl to set correct endpoint
 
 ```sh
 cat <<EOF | sudo tee /etc/crictl.yaml
 runtime-endpoint: unix:///run/containerd/containerd.sock
 EOF
-```
