--- a/k8s-install/k8s-by-kubeadm/3.k8s-install_old.md
+++ b/k8s-install/k8s-by-kubeadm/3.k8s-install_old.md
@@ -3,13 +3,12 @@
 ```shell
 $ cat <<EOF | sudo tee /etc/modules-load.d/k8s.conf
 br_netfilter
+overlay
 EOF
 
 $ cat <<EOF | sudo tee /etc/sysctl.d/k8s.conf
 net.bridge.bridge-nf-call-ip6tables = 1
 net.bridge.bridge-nf-call-iptables = 1
-net.ipv4.ip_forward = 1
-net.ipv6.conf.all.forwarding = 1 # if you use IPv6
 EOF
 $ sudo sysctl --system
 ```
@@ -18,20 +17,29 @@ $ sudo sysctl --system
 
 ```shell
 $ sudo apt-get update
-$ sudo apt-get install -y apt-transport-https ca-certificates curl gpg
+$ sudo apt-get install -y apt-transport-https ca-certificates curl
 ```
 
-### Install kubeadm,kubectl,kubelet
+### Install kubeadm
 
-```sh
-apt-get update && apt-get install -y apt-transport-https
-curl -fsSL https://mirrors.aliyun.com/kubernetes-new/core/stable/v1.28/deb/Release.key |
-    gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
-echo "deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://mirrors.aliyun.com/kubernetes-new/core/stable/v1.28/deb/ /" |
-    tee /etc/apt/sources.list.d/kubernetes.list
-apt-get update
-apt-get install -y kubelet kubeadm kubectl
-#https://developer.aliyun.com/mirror/kubernetes/?spm=a2c6h.25603864.0.0.70fd2529K08faD
+```shell
+$ sudo curl -s https://mirrors.aliyun.com/kubernetes/apt/doc/apt-key.gpg | sudo apt-key add -
+```
+
+### Add the Kubernetes apt repository
+
+```shell
+$ sudo tee /etc/apt/sources.list.d/kubernetes.list <<-'EOF'
+deb https://mirrors.aliyun.com/kubernetes/apt kubernetes-xenial main
+EOF
+```
+
+### Update apt package index, install kubelet, kubeadm and kubectl
+
+```shell
+$ sudo apt-get update
+$ sudo apt-get install -y kubelet kubeadm kubectl
+$ sudo apt-mark hold kubelet kubeadm kubectl
 ```
 
 ### kubeadm init
@@ -42,9 +50,8 @@ $ echo "192.168.34.2 cncamp.com" >> /etc/hosts
 ```shell
 $ kubeadm init \
  --image-repository registry.aliyuncs.com/google_containers \
- --kubernetes-version v1.28.12 \
+ --kubernetes-version v1.22.2 \
  --pod-network-cidr=192.168.0.0/16 \
- --cri-socket /run/containerd/containerd.sock \
  --apiserver-advertise-address=192.168.34.2
 ```
 
@@ -59,7 +66,7 @@ $ sudo chown $(id -u):$(id -g) $HOME/.kube/config
 ### Untaint master
 
 ```shell
-$ kubectl  taint node --all node-role.kubernetes.io/control-plane-
+$ kubectl taint nodes --all node-role.kubernetes.io/master-
 ```
 
 ## Install calico cni plugin
@@ -70,3 +77,13 @@ https://docs.projectcalico.org/getting-started/kubernetes/quickstart
 $ kubectl create -f https://docs.projectcalico.org/manifests/tigera-operator.yaml
 $ kubectl create -f https://docs.projectcalico.org/manifests/custom-resources.yaml
 ```
+
+### if you want to enable containerd during start, set the cri-socket parameter during kubeadm init
+```
+kubeadm init \
+ --image-repository registry.aliyuncs.com/google_containers \
+ --kubernetes-version v1.22.2 \
+ --pod-network-cidr=192.168.0.0/16 \
+ --cri-socket /run/containerd/containerd.sock \
+ --apiserver-advertise-address=192.168.34.2
+ ```
